Add alertmanager ingress

--- a/terraform/modules/prometheus-monitoring/helm/kube-prometheus-addons/templates/managed-certificate.yaml
+++ b/terraform/modules/prometheus-monitoring/helm/kube-prometheus-addons/templates/managed-certificate.yaml
@@ -17,3 +17,4 @@ metadata:
 spec:
   domains:
     - thanos-{{ .Values.cluster }}.{{ .Values.tlsDomain }}
+    - alertmanager-{{ .Values.cluster }}.{{ .Values.tlsDomain }}
