Disable watchdog alert

--- a/terraform/modules/prometheus-monitoring/kube-prometheus-values.yaml
+++ b/terraform/modules/prometheus-monitoring/kube-prometheus-values.yaml
@@ -64,6 +64,9 @@ alertmanager:
       - match_re:
           severity: warning|info
         receiver: "null"
+      - match:
+          alertname: Watchdog
+        receiver: "null"
     receivers:
     - name: "null"
     - name: notify-critical
