--- a/terraform/modules/prometheus-monitoring/helm/kube-prometheus-addons/templates/thanos-query-grpc-svc.yaml
+++ b/terraform/modules/prometheus-monitoring/helm/kube-prometheus-addons/templates/thanos-query-grpc-svc.yaml
@@ -10,6 +10,7 @@ metadata:
   annotations:
     cloud.google.com/app-protocols: '{"grpc":"HTTP2"}'
     beta.cloud.google.com/backend-config: '{"default": "thanos-ingress"}'
+    cloud.google.com/neg: '{"ingress":false}'
 spec:
   type: NodePort
   selector:
