--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,20 +54,16 @@ workflows:
             - plan-stage2
             - hold-stage2
           <<: *live_only
-#      - fleet-install:
-#          requires:
-#            - apply-stage2
-#          <<: *live_only
-#      - plan-destroy:
-#          requires:
-#            - apply
-#      - hold-destroy:
-#          type: approval
-#          requires:
-#            - plan-destroy
-#      - destroy:
-#          requires:
-#            - hold-destroy
+      - plan-destroy:
+          requires:
+            - apply-stage2
+      - hold-destroy:
+          type: approval
+          requires:
+            - plan-destroy
+      - destroy:
+          requires:
+            - hold-destroy
 
 jobs:
   plan-stage1:
@@ -240,27 +236,27 @@ jobs:
           root: .
           paths:
             - .
-#  plan-destroy:
-#    docker:
-#      - image: docker.mirror.hashicorp.services/hashicorp/terraform:0.14.11
-#    steps:
-#      - attach_workspace:
-#          at: .
-#      - run:
-#          name: terraform create destroy plan
-#          command: |
-#            terraform -chdir=terraform plan -destroy -out tfdestroy 
-#      - persist_to_workspace:
-#          root: .
-#          paths:
-#            - .
-#  destroy:
-#    docker:
-#      - image: docker.mirror.hashicorp.services/hashicorp/terraform:0.14.11
-#    steps:
-#      - attach_workspace:
-#          at: .
-#      - run:
-#          name: terraform destroy
-#          command: |
-#            terraform -chdir=terraform apply -auto-approve tfdestroy
+  plan-destroy:
+    docker:
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:0.14.11
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: terraform create destroy plan
+          command: |
+            terraform -chdir=terraform plan -destroy -out tfdestroy 
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+  destroy:
+    docker:
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:0.14.11
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: terraform destroy
+          command: |
+            terraform -chdir=terraform apply -auto-approve tfdestroy
